고객 상세 조회 기능구현